--- a/src/styles/Button.css
+++ b/src/styles/Button.css
@@ -1,3 +1,21 @@
-.generic-button{
-    background-color: blueviolet;
+
+
+.genericbutton {
+    background-color: white;
+    color: #350927;
+    border: 3px solid #019EA3;
+    width: 180px;
+    height: 70px;
+    margin: 2%;
+}
+
+.categorybutton {
+    width: 340px;
+    height: 50px;
+    margin: 5%;
+}
+
+.itembutton {
+    background-color: #F866A8;
+    border: solid  #F866A8;
 }
